--- a/Project-7/frontend/index.html
+++ b/Project-7/frontend/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Chat with RAG</title>
+    <title>Document RAG Chat</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/markdown-it@13/dist/markdown-it.min.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="main-layout">
             <!-- Sidebar for document management -->
             <div class="sidebar">
-                <h2>Documents</h2>
-                <div class="upload-section">
-                    <input type="file" id="fileInput" accept=".pdf" />
-                    <button onclick="uploadFile()">Upload PDF</button>
+                <h2>📄 Documents</h2>
+                <div class="button-group">
+                    <button onclick="loadSampleDocuments()" class="btn-primary">Load Samples</button>
+                    <button onclick="clearAllDocs()" class="btn-secondary">Clear All</button>
                 </div>
                 <div id="documentList" class="document-list"></div>
             </div>
             
             <!-- Chat window -->
             <div class="chat-window">
-                <div class="chat-header">Document Chat (RAG)</div>
+                <div class="chat-header">🔍 RAG Document Chat</div>
+                <div id="selectedDoc" class="selected-doc">Select a document to start</div>
                 <div class="chat-messages" id="messages"></div>
                 <div class="chat-input-area">
                     <input 
